--- a/db/climata_viewer/local_settings.py.template
+++ b/db/climata_viewer/local_settings.py.template
@@ -25,6 +25,10 @@ SOCIAL_AUTH_TWITTER_SECRET = ""
 SOCIAL_AUTH_GITHUB_KEY = ""
 SOCIAL_AUTH_GITHUB_SECRET = ""
 
+SOCIAL_AUTH_LINKEDIN_OAUTH2_KEY = ""
+SOCIAL_AUTH_LINKEDIN_OAUTH2_SECRET = ""
+SOCIAL_AUTH_LINKEDIN_OAUTH2_SCOPE = ['r_emailaddress']
+
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 REDIS_DB = 1
