--- a/conf/climata_viewer.conf
+++ b/conf/climata_viewer.conf
@@ -30,7 +30,7 @@
     # AliasMatch ^/$ /var/www/climata/htdocs/index.html
 
     WSGIScriptAlias / /var/www/climata/db/climata_viewer/wsgi.py
-    WSGIDaemonProcess climata display-name=%{GROUP} python-path=/var/www/climata/db
+    WSGIDaemonProcess climata processes=10 display-name=%{GROUP} python-path=/var/www/climata/db
     WSGIProcessGroup climata
     WSGIApplicationGroup %{GLOBAL}
 
