minor updates from earlier

--- a/conf/climata_viewer.conf
+++ b/conf/climata_viewer.conf
@@ -1,6 +1,6 @@
 # Apache configuration for climata viewer
 <VirtualHost *:80>
-    ServerName climata
+    ServerName climata.houstoneng.net
     DocumentRoot /var/www/climata/htdocs/
 
     <Directory /var/www/climata/htdocs/>
@@ -42,5 +42,6 @@
     </Directory>        
 
     ErrorLog ${APACHE_LOG_DIR}/climata-error.log
-    CustomLog ${APACHE_LOG_DIR}/climata-access.log combined
+    CustomLog ${APACHE_LOG_DIR}/climata-access.log combined env=!forwarded
+    CustomLog ${APACHE_LOG_DIR}/climata-access.log proxy    env=forwarded
 </VirtualHost>
